src/test/resources/purescript_examples/passing/s.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('s')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PsiElement(\)('\')
            PureASTWrapperElement(Abs)
              PsiElement(identifier)('x')
              PsiElement(whitespace)(' ')
            PureASTWrapperElement(Abs)
              PsiElement(identifier)('y')
              PsiElement(whitespace)(' ')
            PureASTWrapperElement(Abs)
              PsiElement(identifier)('z')
              PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Value)
              PureASTWrapperElement(PrefixValue)
                PureASTWrapperElement(Var)
                  PureASTWrapperElement(Qualified)
                    PsiElement(identifier)('x')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(Var)
                  PureASTWrapperElement(Qualified)
                    PsiElement(identifier)('z')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(Parens)
                  PsiElement(()('(')
                  PureASTWrapperElement(Value)
                    PureASTWrapperElement(PrefixValue)
                      PureASTWrapperElement(Var)
                        PureASTWrapperElement(Qualified)
                          PsiElement(identifier)('y')
                          PsiElement(whitespace)(' ')
                      PureASTWrapperElement(Var)
                        PureASTWrapperElement(Qualified)
                          PsiElement(identifier)('z')
                  PsiElement())(')')
                  PsiElement(whitespace)('\n    \n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
