src/test/resources/purescript_examples/failing/NullaryAbs.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PsiElement(identifier)('func')
      PsiElement(whitespace)(' ')
      PsiElement(=)('=')
      PsiElement(whitespace)(' ')
      PsiElement(\)('\')
      PsiElement(whitespace)(' ')
      PsiErrorElement:Expecting Abs
        PsiElement(->)('->')
        PsiElement(whitespace)(' ')
        PsiElement(string)('"no"')
        PsiElement(whitespace)('\n')
